objects/X7S_Event_Segment__c/X7S_Event_Segment__c.object-meta.xml
<CustomObject>
    <description>Object to support Event Segment records as part of the Events accelerator from 7Summits.</description>
    <label>7S Event Segment</label>
    <nameField>
        <label>7S Event Segment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Event Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>