objects/X7S_Event_Segment__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>X7S_Event__c</referenceTo>
    <relationshipLabel>7S Event Segments</relationshipLabel>
    <relationshipName>X7S_Event_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>