objects/X7S_Event_Segment__c/fields/Registration_Setting__c.field-meta.xml
<CustomField>
    <fullName>Registration_Setting__c</fullName>
    <label>Registration Setting</label>
    <length>40</length>
    <type>Text</type>
</CustomField>