objects/X7S_Event_Segment__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-person</fullName>
                <default>true</default>
                <label>In-person</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Overall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>