objects/X7S_Event_Segment__c/fields/Track_capacity__c.field-meta.xml
<CustomField>
    <fullName>Track_capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track capacity</label>
    <type>Checkbox</type>
</CustomField>