objects/X7S_Event_Segment__c/fields/Wait_list__c.field-meta.xml
<CustomField>
    <fullName>Wait_list__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wait list</label>
    <type>Checkbox</type>
</CustomField>